Update for MooTools Forge

--- a/package.yml
+++ b/package.yml
@@ -3,6 +3,7 @@ name: "Custom-Event"
 exports: "custom-event.js"
 
 web: "[cpojer.net](http://cpojer.net)"
+demo: http://cpojer.net/MooTools/custom-event/Demos/
 
 description: "Allows to create custom events based on other custom events."
 
@@ -12,6 +13,8 @@ copyright: "&copy; [Christoph Pojer](http://cpojer.net/)"
 
 author: "cpojer"
 authors: "[Christoph Pojer](http://cpojer.net)"
+category: Utilities
+tags: [custom-events, event, element, element.event]
 
 sources:
     - "Source/Element.defineCustomEvent.js"
